--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+*.g.dart
+*.g.kt
+/android/app/src/main/java/io/flutter/plugins/Messages.java
+.crashlytics/dump_syms.bin
