--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.8
   hooks_riverpod: ^2.5.2
   flutter_hooks: ^0.20.5
-  riverpod_annotation: ^2.3.5
   shared_preferences: ^2.3.2
+  slang: ^3.31.2
+  slang_flutter: ^3.31.0
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +27,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   build_runner: ^2.4.12
   riverpod_generator: ^2.4.3
+  slang_build_runner: ^3.31.0
 
 flutter:
   uses-material-design: true
