--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   slang: ^3.31.2
   slang_flutter: ^3.31.0
   js: ^0.7.1
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  path: ^1.9.0
+  sqflite: ^2.4.0
+  sqflite_common_ffi_web: ^0.4.5+3
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +34,8 @@ dev_dependencies:
   build_runner: ^2.4.12
   riverpod_generator: ^2.4.3
   slang_build_runner: ^3.31.0
+  freezed: ^2.5.7
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
