--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   sqflite: ^2.4.0
   sqflite_common_ffi_web: ^0.4.5+3
   http: ^1.2.2
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
