--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   http: ^1.2.2
   http_parser: ^4.0.2
   openai_dart: ^0.4.2+2
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
