--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,7 +20,7 @@ android {
 
     defaultConfig {
         applicationId = "jp.co.u0235.karakuri_agent"
-        minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
