--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Add Flutter to PATH
         run: echo "/home/ubuntu/flutter/bin" >> $GITHUB_PATH
       - run: git config --global --add safe.directory /home/ubuntu/flutter
-      - run: dart run rsp build-release android apk
+      - run: dart run rps build-release android apk
       - uses: actions/upload-artifact@v3
         with:
           path: build/app/outputs/apk/release/app-release.apk
@@ -58,7 +58,7 @@ jobs:
       - name: Add Flutter to PATH
         run: echo "/home/ubuntu/flutter/bin" >> $GITHUB_PATH
       - run: git config --global --add safe.directory /home/ubuntu/flutter
-      - run: dart run rsp build-release web
+      - run: dart run rps build-release web
       - uses: actions/upload-artifact@v3
         with:
           path: build/web
@@ -74,5 +74,5 @@ jobs:
       - name: Add Flutter to PATH
         run: echo "/home/ubuntu/flutter/bin" >> $GITHUB_PATH
       - run: git config --global --add safe.directory /home/ubuntu/flutter
-      - run: dart run rsp clean-gen default
+      - run: dart run rps clean-gen default
       - run: flutter test
