--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Add Flutter to PATH
         run: echo "/home/ubuntu/flutter/bin" >> $GITHUB_PATH
       - run: git config --global --add safe.directory /home/ubuntu/flutter
-      - run: dart run rps build-release android apk
+      - run: dart run rps build-release apk
       - uses: actions/upload-artifact@v3
         with:
           path: build/app/outputs/apk/release/app-release.apk
