--- a/.github/workflows/release-pages.yml
+++ b/.github/workflows/release-pages.yml
@@ -8,9 +8,6 @@ on:
 permissions:
   contents: write
 
-env:
-  FLUTTER_PATH: /home/ubuntu/flutter/bin
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,10 +18,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Add Flutter to PATH
+        run: echo "/home/ubuntu/flutter/bin" >> $GITHUB_PATH
       - run: git config --global --add safe.directory /home/ubuntu/flutter
-      - run: $FLUTTER_PATH/flutter pub get
-      - run: $FLUTTER_PATH/flutter pub run build_runner build --delete-conflicting-outputs
-      - run: $FLUTTER_PATH/flutter build web --base-href "/karakuri_agent/"
+      - run: dart run rps clean-gen web
+      - run: flutter build web --base-href "/karakuri_agent/"
       - uses: actions/upload-pages-artifact@v1
         with:
           path: build/web
