--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,9 +9,6 @@ permissions:
   issues: write
   pull-requests: write
 
-env:
-  FLUTTER_PATH: /home/ubuntu/flutter/bin
-
 jobs:
   build-android:
     runs-on: ubuntu-latest
@@ -38,10 +35,10 @@ jobs:
           key: ${{ runner.os }}-android-sdk-${{ hashFiles('**/android/gradle/wrapper/gradle-wrapper.properties') }}
           restore-keys: ${{ runner.os }}-android-sdk-
       - run: echo '${{ secrets.ENCODED_RELEASE_KEYSTORE }}' | base64 --decode > android/playstore.keystore
+      - name: Add Flutter to PATH
+        run: echo "/home/ubuntu/flutter/bin" >> $GITHUB_PATH
       - run: git config --global --add safe.directory /home/ubuntu/flutter
-      - run: $FLUTTER_PATH/flutter pub get
-      - run: $FLUTTER_PATH/flutter pub run build_runner build --delete-conflicting-outputs
-      - run: $FLUTTER_PATH/flutter build apk --debug
+      - run: dart run rps build-release apk
       - uses: actions/upload-artifact@v3
         with:
           path: build/app/outputs/apk/release/app-release.apk
@@ -58,10 +55,10 @@ jobs:
           path: /home/ubuntu/.pub-cache
           key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: ${{ runner.os }}-flutter-
+      - name: Add Flutter to PATH
+        run: echo "/home/ubuntu/flutter/bin" >> $GITHUB_PATH
       - run: git config --global --add safe.directory /home/ubuntu/flutter
-      - run: $FLUTTER_PATH/flutter pub get
-      - run: $FLUTTER_PATH/flutter pub run build_runner build --delete-conflicting-outputs
-      - run: $FLUTTER_PATH/flutter build web
+      - run: dart run rps build-release web
       - uses: actions/upload-artifact@v3
         with:
           path: build/web
@@ -74,7 +71,8 @@ jobs:
       options: --user root
     steps:
       - uses: actions/checkout@v3
+      - name: Add Flutter to PATH
+        run: echo "/home/ubuntu/flutter/bin" >> $GITHUB_PATH
       - run: git config --global --add safe.directory /home/ubuntu/flutter
-      - run: $FLUTTER_PATH/flutter pub get
-      - run: $FLUTTER_PATH/flutter pub run build_runner build --delete-conflicting-outputs
-      - run: $FLUTTER_PATH/flutter test
+      - run: dart run rps clean-gen default
+      - run: flutter test
