--- a/compose-server.yml
+++ b/compose-server.yml
@@ -5,7 +5,7 @@ services:
     tty: true
     command: >
       /bin/sh -c "cd ~/workspace/karakuri_agent && 
-      dart run rps run-release web
+      dart run rps run-release web"
     network_mode: "host"
     volumes:
       - ./:/home/ubuntu/workspace/karakuri_agent
