--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   flutter_silero_vad:
     git: 
       url: https://github.com/0235-jp/flutter_silero_vad.git
-      ref: 0235-jp
+      ref: 8657bc06515b98c38b56734341ffe57a8855e994
   audio_streamer:
     git: 
       url: https://github.com/0235-jp/audio_streamer.git
-      ref: 0235-jp
+      ref: 2b87feba15abbd0531e18eede1943c87e102f8bd
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
 
