--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ version: 0.1.2+7
 
 environment:
   sdk: ^3.5.3
-  flutter: "3.24.4"
+  flutter: "3.24.5"
 
 dependencies:
   flutter:
@@ -14,20 +14,20 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  hooks_riverpod: ^2.5.4
+  hooks_riverpod: ^2.6.1
   flutter_hooks: ^0.20.5
-  shared_preferences: ^2.3.2
-  slang: ^3.32.0
-  slang_flutter: ^3.32.0
+  shared_preferences: ^2.3.3
+  slang: ^4.2.1
+  slang_flutter: ^4.2.0
   js: ^0.7.1
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   path: ^1.9.0
-  sqflite: ^2.4.0
+  sqflite: ^2.4.1
   sqflite_common_ffi_web: ^0.4.5+3
   http: ^1.2.2
   http_parser: ^4.0.2
-  openai_dart: ^0.4.2+2
+  openai_dart: ^0.4.4
   audioplayers: ^6.1.0
   idb_shim: ^2.6.1+7
   archive: ^3.6.1
@@ -50,8 +50,8 @@ dev_dependencies:
   dart_style: ^2.3.7
   flutter_lints: ^5.0.0
   build_runner: ^2.4.13
-  riverpod_generator: ^2.4.3
-  slang_build_runner: ^3.32.0
+  riverpod_generator: ^2.6.2
+  slang_build_runner: ^4.2.0
   freezed: ^2.5.7
   json_serializable: ^6.8.0
   rps: ^0.9.1
