--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,5 @@ app.*.map.json
 /android/app/src/main/java/io/flutter/plugins/Messages.java
 .crashlytics/dump_syms.bin
 
-# flutter for web
-node_modules/
-web/vad-web/
+# melos
+pubspec_overrides.yaml
