--- a/app/compose.yml
+++ b/app/compose.yml
@@ -1,9 +1,10 @@
 services:
-  krakuri-agent-app-dev:
+  karakuri-agent-app-dev:
     build: .
-    container_name: "krakuri-agent-app-dev"
+    container_name: "karakuri-agent-app-dev"
     tty: true
     command: sleep infinity
-    network_mode: "host"
+    ports:
+     - "50505:50505"
     volumes:
       - ./:/home/ubuntu/workspace/karakuri_agent
