--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,12 +9,16 @@ permissions:
   issues: write
   pull-requests: write
 
+defaults:
+  run:
+    working-directory: app
+
 jobs:
-  build-android:
+  build-android-app:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     container:
-      image: ghcr.io/0235-jp/karkuri-agent-dev:latest
+      image: ghcr.io/0235-jp/karkuri-agent-app-dev:latest
       options: --user root
     env:
       KEYSTORE_ALIAS: ${{ secrets.RELEASE_KEYSTORE_ALIAS }}
@@ -42,11 +46,11 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           path: build/app/outputs/apk/release/app-release.apk
-  build-web:
+  build-web-app:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     container:
-      image: ghcr.io/0235-jp/karkuri-agent-dev:latest
+      image: ghcr.io/0235-jp/karkuri-agent-app-dev:latest
       options: --user root
     steps:
       - uses: actions/checkout@v3
@@ -63,11 +67,11 @@ jobs:
         with:
           path: build/web
           retention-days: 1
-  test:
+  test-app:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     container:
-      image: ghcr.io/0235-jp/karkuri-agent-dev:latest
+      image: ghcr.io/0235-jp/karkuri-agent-app-dev:latest
       options: --user root
     steps:
       - uses: actions/checkout@v3
