Add ios support

--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -50,5 +50,7 @@
    		<string>en</string>
    		<string>ja</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Used for conversations with AI.</string>
 </dict>
 </plist>
