--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
       - run: dart run rps build-release apk
       - uses: actions/upload-artifact@v3
         with:
-          path: build/app/outputs
+          path: app/build/app/outputs
           retention-days: 1
   build-web-app:
     runs-on: ubuntu-latest
@@ -72,5 +72,5 @@ jobs:
       - run: dart run rps build-release web
       - uses: actions/upload-artifact@v3
         with:
-          path: build/web
+          path: app/build/web
           retention-days: 1
