--- a/.github/workflows/release-pages.yml
+++ b/.github/workflows/release-pages.yml
@@ -29,7 +29,7 @@ jobs:
       - run: flutter build web --base-href "/karakuri_agent/"
       - uses: actions/upload-pages-artifact@v1
         with:
-          path: build/web
+          path: app/build/web
   deploy:
     needs: build
     runs-on: ubuntu-latest 
