--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,3 +4,6 @@ python-dotenv==1.0.1
 litellm==1.52.15
 aiohttp==3.11.8
 pydantic==2.10.2
+faster-whisper==1.1.0
+soundfile==0.12.1
+python-multipart==0.0.17
