--- a/server/example.env
+++ b/server/example.env
@@ -3,9 +3,12 @@ LINE_MAX_AUDIO_FILES=
 LINE_AUDIO_FILES_DIR=
 
 AGENT_1_NAME=
-AGENT_1_LLM_BASE_URL=
-AGENT_1_LLM_API_KEY=
-AGENT_1_LLM_MODEL=
+AGENT_1_MESSAGE_GENERATE_LLM_BASE_URL=
+AGENT_1_MESSAGE_GENERATE_LLM_API_KEY=
+AGENT_1_MESSAGE_GENERATE_LLM_MODEL=
+AGENT_1_EMOTION_GENERATE_LLM_BASE_URL=
+AGENT_1_EMOTION_GENERATE_LLM_API_KEY=
+AGENT_1_EMOTION_GENERATE_LLM_MODEL=
 AGENT_1_TTS_TYPE=
 AGENT_1_TTS_BASE_URL=
 AGENT_1_TTS_API_KEY=
@@ -16,9 +19,12 @@ AGENT_1_LINE_CHANNEL_SECRET=
 AGENT_1_LINE_CHANNEL_ACCESS_TOKEN=
 
 AGENT_2_NAME=
-AGENT_2_LLM_BASE_URL=
-AGENT_2_LLM_API_KEY=
-AGENT_2_LLM_MODEL=
+AGENT_2_MESSAGE_GENERATE_LLM_BASE_URL=
+AGENT_2_MESSAGE_GENERATE_LLM_API_KEY=
+AGENT_2_MESSAGE_GENERATE_LLM_MODEL=
+AGENT_2_EMOTION_GENERATE_LLM_BASE_URL=
+AGENT_2_EMOTION_GENERATE_LLM_API_KEY=
+AGENT_2_EMOTION_GENERATE_LLM_MODEL=
 AGENT_2_TTS_TYPE=
 AGENT_2_TTS_BASE_URL=
 AGENT_2_TTS_API_KEY=
