--- a/server/example.env
+++ b/server/example.env
@@ -1,6 +1,8 @@
 API_KEYS=your-api-key-1,your-api-key-2,your-api-key-3
 LINE_MAX_AUDIO_FILES=
 LINE_AUDIO_FILES_DIR=
+CHAT_MAX_AUDIO_FILES=
+CHAT_AUDIO_FILES_DIR=
 
 AGENT_1_NAME=
 AGENT_1_MESSAGE_GENERATE_LLM_BASE_URL=
