--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -16,33 +16,23 @@ dependencies:
   cupertino_icons: ^1.0.8
   hooks_riverpod: ^2.6.1
   flutter_hooks: ^0.20.5
-  shared_preferences: ^2.3.3
   slang: ^4.2.1
   slang_flutter: ^4.2.0
-  js: ^0.7.1
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   path: ^1.9.0
   sqflite: ^2.4.1
   sqflite_common_ffi_web: ^0.4.5+4
   http: ^1.2.2
-  http_parser: ^4.0.2
-  openai_dart: ^0.4.4
   audioplayers: ^6.1.0
   idb_shim: ^2.6.1+7
   archive: ^3.6.1
   flutter_svg: ^2.0.15
   image: ^4.3.0
-  flutter_silero_vad:
-    git: 
-      url: https://github.com/0235-jp/flutter_silero_vad.git
-      ref: 8657bc06515b98c38b56734341ffe57a8855e994
-  audio_streamer:
-    git: 
-      url: https://github.com/0235-jp/audio_streamer.git
-      ref: 2b87feba15abbd0531e18eede1943c87e102f8bd
   path_provider: ^2.1.5
   permission_handler: ^11.3.1
+  speech_to_text: ^7.0.0
+  async: ^2.11.0
 
 dev_dependencies:
   flutter_test:
@@ -65,21 +55,12 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/sounds/
-    - assets/silero_models/
 
 scripts:
-  clean: flutter clean && rm -rf web/node_modules
-  get: 
-    default: flutter pub get
-    web: |
-      flutter pub get
-      npm install @ricky0123/vad-web@0.0.19 onnxruntime-web@1.20.0 --save-dev
-      mv node_modules/ web/node_modules
+  clean: flutter clean
+  get: flutter pub get
   gen: dart run build_runner build --delete-conflicting-outputs
-  clean-gen: 
-    default: dart run rps clean && dart run rps get default && dart run rps gen
-    web: dart run rps clean && dart run rps get web && dart run rps gen
+  clean-gen: dart run rps clean && dart run rps get && dart run rps gen
   build:  
     apk: flutter build apk ${0} --obfuscate --split-debug-info=obfuscate/android
     appbundle: flutter build appbundle ${0} --obfuscate --split-debug-info=obfuscate/android
@@ -93,20 +74,20 @@ scripts:
     web: rps build web
   build-release:
     apk:
-      $before: dart run rps clean-gen default
+      $before: dart run rps clean-gen
       $script: rps build apk --release
     appbundle:
-      $before: dart run rps clean-gen default
+      $before: dart run rps clean-gen
       $script: rps build appbundle --release
     web: 
-      $before: dart run rps clean-gen web
+      $before: dart run rps clean-gen
       $script: rps build web
   run-release:
     default:
-      $before: dart run rps clean-gen default
+      $before: dart run rps clean-gen
       $script: dart run rps flutter-run default --release
     web:
-      $before: dart run rps clean-gen web
+      $before: dart run rps clean-gen
       $script: dart run rps flutter-run web --release
   run-debug:
     default: dart run rps flutter-run default --debug
