--- a/server/example.env
+++ b/server/example.env
@@ -1,3 +1,7 @@
+# Copyright (c) 0235 Inc.
+# This file is licensed under the karakuri_agent Personal Use & No Warranty License.
+# Please see the LICENSE file in the project root.
+
 API_KEYS=your-api-key-1,your-api-key-2,your-api-key-3
 LINE_MAX_AUDIO_FILES=
 LINE_AUDIO_FILES_DIR=
