--- a/Dockerfile_server
+++ b/Dockerfile_server
@@ -1,3 +1,7 @@
+# Copyright (c) 0235 Inc.
+# This file is licensed under the karakuri_agent Personal Use & No Warranty License.
+# Please see the LICENSE file in the project root.
+
 FROM python:3.10-slim
 
 WORKDIR /app
