--- a/server/compose.yml
+++ b/server/compose.yml
@@ -1,3 +1,7 @@
+# Copyright (c) 0235 Inc.
+# This file is licensed under the karakuri_agent Personal Use & No Warranty License.
+# Please see the LICENSE file in the project root.
+
 services:
   karakuri-agent-server-dev:
     container_name: "karakuri-agent-server-dev"
