--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,7 +14,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  check-server:
+  analyze-server:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     defaults:
