Fix support images

--- a/server/example.env
+++ b/server/example.env
@@ -7,6 +7,7 @@ LINE_MAX_AUDIO_FILES=
 LINE_AUDIO_FILES_DIR=
 CHAT_MAX_AUDIO_FILES=
 CHAT_AUDIO_FILES_DIR=
+CHECK_SUPPORT_VISION_MODEL=true
 
 AGENT_1_NAME=
 AGENT_1_MESSAGE_GENERATE_LLM_BASE_URL=
@@ -15,6 +16,9 @@ AGENT_1_MESSAGE_GENERATE_LLM_MODEL=
 AGENT_1_EMOTION_GENERATE_LLM_BASE_URL=
 AGENT_1_EMOTION_GENERATE_LLM_API_KEY=
 AGENT_1_EMOTION_GENERATE_LLM_MODEL=
+AGENT_1_VISION_GENERATE_LLM_BASE_URL=
+AGENT_1_VISION_GENERATE_LLM_API_KEY=
+AGENT_1_VISION_GENERATE_LLM_MODEL=
 AGENT_1_TTS_TYPE=
 AGENT_1_TTS_BASE_URL=
 AGENT_1_TTS_API_KEY=
@@ -31,6 +35,9 @@ AGENT_2_MESSAGE_GENERATE_LLM_MODEL=
 AGENT_2_EMOTION_GENERATE_LLM_BASE_URL=
 AGENT_2_EMOTION_GENERATE_LLM_API_KEY=
 AGENT_2_EMOTION_GENERATE_LLM_MODEL=
+AGENT_2_VISION_GENERATE_LLM_BASE_URL=
+AGENT_2_VISION_GENERATE_LLM_API_KEY=
+AGENT_2_VISION_GENERATE_LLM_MODEL=
 AGENT_2_TTS_TYPE=
 AGENT_2_TTS_BASE_URL=
 AGENT_2_TTS_API_KEY=
