--- a/server/example.env
+++ b/server/example.env
@@ -7,6 +7,8 @@ LINE_MAX_AUDIO_FILES=
 LINE_AUDIO_FILES_DIR=
 CHAT_MAX_AUDIO_FILES=
 CHAT_AUDIO_FILES_DIR=
+WEB_SOCKET_MAX_AUDIO_FILES=
+WEB_SOCKET_AUDIO_FILES_DIR=
 CHECK_SUPPORT_VISION_MODEL=true
 
 AGENT_1_NAME=
