--- a/example.env
+++ b/example.env
@@ -10,6 +10,8 @@ CHAT_AUDIO_FILES_DIR=
 WEB_SOCKET_MAX_AUDIO_FILES=
 WEB_SOCKET_AUDIO_FILES_DIR=
 CHECK_SUPPORT_VISION_MODEL=true
+REDIS_URL=redis://karakuri_redis
+THRESHOLD_TOKENS_PERCENTAGE=0.8
 
 AGENT_1_NAME=
 AGENT_1_MESSAGE_GENERATE_LLM_BASE_URL=
