--- a/example.env
+++ b/example.env
@@ -21,6 +21,9 @@ AGENT_1_MESSAGE_GENERATE_LLM_MODEL=
 AGENT_1_EMOTION_GENERATE_LLM_BASE_URL=
 AGENT_1_EMOTION_GENERATE_LLM_API_KEY=
 AGENT_1_EMOTION_GENERATE_LLM_MODEL=
+AGENT_1_SCHEDULE_GENERATE_LLM_BASE_URL=
+AGENT_1_SCHEDULE_GENERATE_LLM_API_KEY=
+AGENT_1_SCHEDULE_GENERATE_LLM_MODEL=
 AGENT_1_VISION_GENERATE_LLM_BASE_URL=
 AGENT_1_VISION_GENERATE_LLM_API_KEY=
 AGENT_1_VISION_GENERATE_LLM_MODEL=
@@ -47,6 +50,9 @@ AGENT_2_MESSAGE_GENERATE_LLM_MODEL=
 AGENT_2_EMOTION_GENERATE_LLM_BASE_URL=
 AGENT_2_EMOTION_GENERATE_LLM_API_KEY=
 AGENT_2_EMOTION_GENERATE_LLM_MODEL=
+AGENT_2_SCHEDULE_GENERATE_LLM_BASE_URL=
+AGENT_2_SCHEDULE_GENERATE_LLM_API_KEY=
+AGENT_2_SCHEDULE_GENERATE_LLM_MODEL=
 AGENT_2_VISION_GENERATE_LLM_BASE_URL=
 AGENT_2_VISION_GENERATE_LLM_API_KEY=
 AGENT_2_VISION_GENERATE_LLM_MODEL=
