--- a/example.env
+++ b/example.env
@@ -18,9 +18,12 @@ AGENT_1_NAME=
 AGENT_1_MESSAGE_GENERATE_LLM_BASE_URL=
 AGENT_1_MESSAGE_GENERATE_LLM_API_KEY=
 AGENT_1_MESSAGE_GENERATE_LLM_MODEL=
-AGENT_1_EMOTION_GENERATE_LLM_BASE_URL=
-AGENT_1_EMOTION_GENERATE_LLM_API_KEY=
-AGENT_1_EMOTION_GENERATE_LLM_MODEL=
+AGENT_1_ANALYZE_GENERATE_LLM_BASE_URL=
+AGENT_1_ANALYZE_GENERATE_LLM_API_KEY=
+AGENT_1_ANALYZE_GENERATE_LLM_MODEL=
+AGENT_1_SCHEDULE_GENERATE_LLM_BASE_URL=
+AGENT_1_SCHEDULE_GENERATE_LLM_API_KEY=
+AGENT_1_SCHEDULE_GENERATE_LLM_MODEL=
 AGENT_1_VISION_GENERATE_LLM_BASE_URL=
 AGENT_1_VISION_GENERATE_LLM_API_KEY=
 AGENT_1_VISION_GENERATE_LLM_MODEL=
@@ -33,13 +36,23 @@ AGENT_1_LLM_SYSTEM_PROMPT=
 AGENT_1_LINE_CHANNEL_SECRET=
 AGENT_1_LINE_CHANNEL_ACCESS_TOKEN=
 
+# Agent Schedule Settings
+AGENT_1_TIMEZONE=Asia/Tokyo
+AGENT_1_WAKE_TIME=08:00
+AGENT_1_SLEEP_TIME=22:00
+AGENT_1_MEAL_TIMES=[{"start":"12:00","end":"13:00"},{"start":"19:00","end":"20:00"}]
+AGENT_1_CUSTOM_SCHEDULES=[]
+
 AGENT_2_NAME=
 AGENT_2_MESSAGE_GENERATE_LLM_BASE_URL=
 AGENT_2_MESSAGE_GENERATE_LLM_API_KEY=
 AGENT_2_MESSAGE_GENERATE_LLM_MODEL=
-AGENT_2_EMOTION_GENERATE_LLM_BASE_URL=
-AGENT_2_EMOTION_GENERATE_LLM_API_KEY=
-AGENT_2_EMOTION_GENERATE_LLM_MODEL=
+AGENT_2_ANALYZE_GENERATE_LLM_BASE_URL=
+AGENT_2_ANALYZE_GENERATE_LLM_API_KEY=
+AGENT_2_ANALYZE_GENERATE_LLM_MODEL=
+AGENT_2_SCHEDULE_GENERATE_LLM_BASE_URL=
+AGENT_2_SCHEDULE_GENERATE_LLM_API_KEY=
+AGENT_2_SCHEDULE_GENERATE_LLM_MODEL=
 AGENT_2_VISION_GENERATE_LLM_BASE_URL=
 AGENT_2_VISION_GENERATE_LLM_API_KEY=
 AGENT_2_VISION_GENERATE_LLM_MODEL=
@@ -51,3 +64,10 @@ AGENT_2_TTS_SPEAKER_ID=
 AGENT_2_LLM_SYSTEM_PROMPT=
 AGENT_2_LINE_CHANNEL_SECRET=
 AGENT_2_LINE_CHANNEL_ACCESS_TOKEN=
+
+# Agent Schedule Settings
+AGENT_2_TIMEZONE=Asia/Tokyo
+AGENT_2_WAKE_TIME=08:00
+AGENT_2_SLEEP_TIME=22:00
+AGENT_2_MEAL_TIMES=[{"start":"12:00","end":"13:00"},{"start":"19:00","end":"20:00"}]
+AGENT_2_CUSTOM_SCHEDULES=[]
