--- a/compose.yml
+++ b/compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: "karakuri-agent-server"
     volumes:
       - ./:/app
+      - ./logs:/app/logs  
     build: 
       context: .
       dockerfile: Dockerfile
@@ -19,14 +20,10 @@ services:
     container_name: "karakuri-redis"
     image: redis:7.2
     ports:
-      - "6378:6379"
+      - "6379:6379"
     command: redis-server --requirepass ${REDIS_PASSWORD}
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
-    deploy:
-      resources:
-        limits:
-          memory: 512M
     volumes:
       - redis_data:/data
 
