--- a/example.env
+++ b/example.env
@@ -13,6 +13,10 @@ CHECK_SUPPORT_VISION_MODEL=true
 REDIS_URL=redis://karakuri-redis
 REDIS_PASSWORD=Redis_P@ssw0rd123
 THRESHOLD_TOKENS_PERCENTAGE=0.8
+ZEP_API_SECRET=your-api-secret
+ZEP_OPENAI_BASE_URL=your_provider_base_url
+ZEP_OPENAI_API_KEY=your_api_key
+ZEP_OPENAI_MODEL_NAME=your_model_name
 
 AGENT_1_NAME=
 AGENT_1_MESSAGE_GENERATE_LLM_BASE_URL=
