--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
 python-dotenv==1.0.1
-litellm==1.55.12
+litellm==1.58.4
 aiohttp==3.11.11
-pydantic==2.10.4
-faster-whisper==1.1.0
-soundfile==0.12.1
+pydantic==2.10.5
+faster-whisper==1.1.1
+soundfile==0.13.0
 python-multipart==0.0.20
-line-bot-sdk==3.14.2
+line-bot-sdk==3.14.3
 pydub==0.25.1
-pyright==1.1.391
-ruff==0.8.4
+pyright==1.1.392.post0
+ruff==0.9.2
 redis==5.2.1
 httpx==0.27.0
+zep-python==2.0.2
