--- a/example.env
+++ b/example.env
@@ -13,6 +13,7 @@ CHECK_SUPPORT_VISION_MODEL=true
 REDIS_URL=redis://karakuri-redis
 REDIS_PASSWORD=Redis_P@ssw0rd123
 THRESHOLD_TOKENS_PERCENTAGE=0.8
+ZEP_URL=http://zep:8000
 ZEP_API_SECRET=your-api-secret
 ZEP_OPENAI_BASE_URL=your_provider_base_url
 ZEP_OPENAI_API_KEY=your_api_key
