--- a/example.env
+++ b/example.env
@@ -13,8 +13,6 @@ CHECK_SUPPORT_VISION_MODEL=true
 REDIS_URL=redis://karakuri-redis
 REDIS_PASSWORD=Redis_P@ssw0rd123
 THRESHOLD_TOKENS_PERCENTAGE=0.8
-ZEP_URL=http://zep:8000
-ZEP_API_SECRET=your-api-secret
 
 AGENT_1_NAME=
 AGENT_1_MESSAGE_GENERATE_LLM_BASE_URL=
@@ -34,6 +32,8 @@ AGENT_1_TTS_SPEAKER_ID=
 AGENT_1_LLM_SYSTEM_PROMPT=
 AGENT_1_LINE_CHANNEL_SECRET=
 AGENT_1_LINE_CHANNEL_ACCESS_TOKEN=
+AGENT_1_ZEP_URL=http://zep:8000
+AGENT_1_ZEP_API_SECRET=your-api-secret
 
 AGENT_2_NAME=
 AGENT_2_MESSAGE_GENERATE_LLM_BASE_URL=
@@ -53,3 +53,5 @@ AGENT_2_TTS_SPEAKER_ID=
 AGENT_2_LLM_SYSTEM_PROMPT=
 AGENT_2_LINE_CHANNEL_SECRET=
 AGENT_2_LINE_CHANNEL_ACCESS_TOKEN=
+AGENT_2_ZEP_URL=http://zep:8000
+AGENT_2_ZEP_API_SECRET=your-api-secret
