--- a/compose-dev.yml
+++ b/compose-dev.yml
@@ -22,29 +22,29 @@ services:
              pip install --user --no-cache-dir --upgrade -r requirements.txt &&
              sleep infinity"
     depends_on:
-      - redis
+      - valkey
     networks:
       - karakuri-agent-dev-network
 
-  redis:
-    container_name: "karakuri-redis-dev"
-    image: redis:7.2
+  valkey:
+    container_name: "karakuri-valkey-dev"
+    image: valkey/valkey:8.0.2
     ports:
       - "6378:6379"
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: valkey-server --requirepass ${VALKEY_PASSWORD}
     environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - VALKEY_PASSWORD=${VALKEY_PASSWORD}
+    networks:
+      - karakuri-agent-dev-network
     deploy:
       resources:
         limits:
           memory: 512M
     volumes:
-      - redis_data:/data
-    networks:
-      - karakuri-agent-dev-network
+      - valkey_data:/data
 
 volumes:
-  redis_data:
+  valkey_data:
   pip-cache:
   pip-local:
 
