--- a/compose.yml
+++ b/compose.yml
@@ -14,16 +14,16 @@ services:
     networks:
       - karakuri-agent-network
     depends_on:
-      - redis
+      - valkey
 
-  redis:
-    container_name: "karakuri-redis"
-    image: redis:7.2
+  valkey:
+    container_name: "karakuri-valkey"
+    image: valkey/valkey:8.0.2
     ports:
       - "6378:6379"
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: valkey-server --requirepass ${VALKEY_PASSWORD}
     environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - VALKEY_PASSWORD=${VALKEY_PASSWORD}
     networks:
       - karakuri-agent-network
     deploy:
@@ -31,9 +31,10 @@ services:
         limits:
           memory: 512M
     volumes:
-      - redis_data:/data
+      - valkey_data:/data
+
 volumes:
-  redis_data:
+  valkey_data:
 
 networks:
   karakuri-agent-network:
