--- a/example.env
+++ b/example.env
@@ -10,9 +10,8 @@ CHAT_AUDIO_FILES_DIR=
 WEB_SOCKET_MAX_AUDIO_FILES=
 WEB_SOCKET_AUDIO_FILES_DIR=
 CHECK_SUPPORT_VISION_MODEL=true
-REDIS_URL=redis://karakuri-redis
-REDIS_PASSWORD=Redis_P@ssw0rd123
-THRESHOLD_TOKENS_PERCENTAGE=0.8
+VALKEY_URL=redis://karakuri-valkey
+VALKEY_PASSWORD=Valkey_P@ssw0rd123
 
 AGENT_1_NAME=
 AGENT_1_MESSAGE_GENERATE_LLM_BASE_URL=
