--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ line-bot-sdk==3.14.3
 pydub==0.25.1
 pyright==1.1.392.post0
 ruff==0.9.2
-redis==5.2.1
+valkey==6.0.2
 httpx==0.27.0
 zep-python==2.0.2
 zep-cloud==2.3.1
