refactor: Improve memory system with agent-specific Zep and enhanced session management (#96)
* feat: improve memory facts handling

- Add Redis caching for memory facts
- Fix facts field in KarakuriMemory when no session exists
- Refactor session memory handling in ZepClient
- Ensure facts are properly maintained across session changes

* docs: update memory system documentation with Redis caching details

* docs: update README files with Redis caching details

* fix: Improve handling of facts in memory service

- Remove unnecessary comment
- Fix facts handling in get_session_memory
- Fix session_id usage in update_session_memory

* fix: Update exception handling in ZepCloudClient

- Replace zep_python.BadRequestError with zep_cloud.BadRequestError to match the correct package

* refactor: Separate Zep client configuration per agent

- Move ZEP_URL and ZEP_API_SECRET from global to agent-specific configuration
- Add agent_id parameter to memory service user-related methods
- Update API endpoints to include agent_id parameter
- Create Zep client instance per agent in memory service methods

* refactor: Improve session management in memory service

- Rename _create_session_id to _create_session_key for clarity
- Add _get_session_id method to generate and manage UUID-based session IDs
- Implement Redis hash-based session key to ID mapping
- Update memory retrieval process to use two-step session lookup

* docs: Update design.md to reflect memory system changes

- Add agent-specific Zep configuration details
- Update session management documentation
- Clarify user management per agent functionality

* docs: Move Zep configuration to agent-specific section

- Move Zep configuration from Memory System section to Agent Configuration
- Remove redundant Memory System Configuration section
- Update both README.md and README_JP.md

* refactor: Separate Redis operations into dedicated client class

- Create RedisClient class to 

--- a/example.env
+++ b/example.env
@@ -10,11 +10,8 @@ CHAT_AUDIO_FILES_DIR=
 WEB_SOCKET_MAX_AUDIO_FILES=
 WEB_SOCKET_AUDIO_FILES_DIR=
 CHECK_SUPPORT_VISION_MODEL=true
-REDIS_URL=redis://karakuri-redis
-REDIS_PASSWORD=Redis_P@ssw0rd123
-THRESHOLD_TOKENS_PERCENTAGE=0.8
-ZEP_URL=http://zep:8000
-ZEP_API_SECRET=your-api-secret
+VALKEY_URL=redis://karakuri-valkey
+VALKEY_PASSWORD=Valkey_P@ssw0rd123
 
 AGENT_1_NAME=
 AGENT_1_MESSAGE_GENERATE_LLM_BASE_URL=
@@ -34,6 +31,8 @@ AGENT_1_TTS_SPEAKER_ID=
 AGENT_1_LLM_SYSTEM_PROMPT=
 AGENT_1_LINE_CHANNEL_SECRET=
 AGENT_1_LINE_CHANNEL_ACCESS_TOKEN=
+AGENT_1_ZEP_URL=http://zep:8000
+AGENT_1_ZEP_API_SECRET=your-api-secret
 
 AGENT_2_NAME=
 AGENT_2_MESSAGE_GENERATE_LLM_BASE_URL=
@@ -53,3 +52,5 @@ AGENT_2_TTS_SPEAKER_ID=
 AGENT_2_LLM_SYSTEM_PROMPT=
 AGENT_2_LINE_CHANNEL_SECRET=
 AGENT_2_LINE_CHANNEL_ACCESS_TOKEN=
+AGENT_2_ZEP_URL=http://zep:8000
+AGENT_2_ZEP_API_SECRET=your-api-secret
