--- a/example.env
+++ b/example.env
@@ -5,8 +5,8 @@
 API_KEYS=your-api-key-1,your-api-key-2,your-api-key-3
 LINE_MAX_AUDIO_FILES=
 LINE_AUDIO_FILES_DIR=
-CHAT_MAX_AUDIO_FILES=
-CHAT_AUDIO_FILES_DIR=
+TALK_MAX_AUDIO_FILES=
+TALK_AUDIO_FILES_DIR=
 WEB_SOCKET_MAX_AUDIO_FILES=
 WEB_SOCKET_AUDIO_FILES_DIR=
 CHECK_SUPPORT_VISION_MODEL=true
